tests/baselines/reference/invalidNumberAssignments.errors.txt
==== tests/cases/compiler/invalidNumberAssignments.ts (10 errors) ====
    var x = 1;
    
    var a: boolean = x;
        ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'number' to 'boolean'.
    var b: string = x;
        ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'number' to 'string'.
    var c: void = x;
        ~~~~~~~~~~~
!!! error TS2011: Cannot convert 'number' to 'void'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~~~~~~~~
!!! error TS2012: Cannot convert 'number' to 'C':
!!! 	Type 'Number' is missing property 'foo' from type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~~~~~~~~
!!! error TS2012: Cannot convert 'number' to 'I':
!!! 	Type 'Number' is missing property 'bar' from type 'I'.
    
    var g: { baz: string } = 1;
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'number' to '{ baz: string; }':
!!! 	Type 'Number' is missing property 'baz' from type '{ baz: string; }'.
    var g2: { 0: number } = 1;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'number' to '{ 0: number; }':
!!! 	Type 'Number' is missing property '0' from type '{ 0: number; }'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2011: Cannot convert 'number' to 'T'.
    }
    i = x;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.